--- a/MY WEB.html
+++ b/MY WEB.html
@@ -3,6 +3,7 @@
 <head>
     <title>MY WEB</title>
     <link rel="stylesheet" href="stylee.css">
+    <script defer src="main.dart.js"></script>
 </head>
 <body>
     <header>
