--- a/form of fide.html
+++ b/form of fide.html
@@ -3,6 +3,7 @@
 <head>
 <title> my form </title>
 <link rel="stylesheet" href="stylee.css">
+ <script defer src="main.dart.js"></script>
 </head>
 <body>
     <header>
