--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     
     <title>CONTACTS</title>
     <link rel="stylesheet" href="stylee.css">
+     <script defer src="main.dart.js"></script>
 </head>
 <body>
     <header>
